# delta-skillpack

./: .gitignore  .mcp.json  .skillpackrc  .skillpackrc.example  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml  setup.py  validator.py
.claude/: CLAUDE.md
.claude-plugin/: CLAUDE.md  plugin.json
.claude/skills/: do.md  skill-do.md  skillpack-init.md
commands/: CLAUDE.md  cancel-ralph.md  ralph-loop.md
docs/: superpowers-integration.md
hooks/: CLAUDE.md  hooks.json  session-start.sh  stop-hook.sh
prompts/: CLAUDE.md  implement.md  learn.md  plan.md  ralph_prd.md  ralph_story.md  research.md  review.md  ui.md  verify-spec.md
scripts/: CLAUDE.md  ralph-loop.sh
skillpack/: CLAUDE.md  __init__.py  checkpoint.py  cli.py  consensus.py  core.py  dispatch.py  engines.py  executor.py  knowledge.py  logging.py  models.py  router.py  schema.py  usage.py
skillpack/adapters/: __init__.py  base.py  codex_adapter.py  gemini_adapter.py  version_detector.py
skillpack/integrations/: __init__.py
skillpack/integrations/lsp/: __init__.py  client.py  config.py
skillpack/ralph/: CLAUDE.md  __init__.py  browser.py  dashboard.py  dev_server.py  learning.py  memory.py  notebooklm.py  orchestrator.py  self_heal.py  verify.py
skillpack/skills/: __init__.py  loader.py  metadata.py  registry.py
skillpack/tasks/: __init__.py  branch.py  dag.py  visualizer.py
skillpack/tools/: __init__.py  lazy_loader.py  registry.py  search.py
skills/delta:do/: CLAUDE.md  SKILL.md
skills/delta:do/modules/: checkpoint.md  config-schema.md  cross-validation.md  logging.md  loop-engine.md  mcp-dispatch.md  recovery.md  review.md  routing.md  setup-guide.md  test-classification.md
skills/delta:implement/: CLAUDE.md  SKILL.md
skills/delta:plan/: SKILL.md
skills/delta:ralph-init/: SKILL.md
skills/delta:ralph-start/: CLAUDE.md  SKILL.md
skills/delta:ralph-status/: CLAUDE.md  SKILL.md
skills/delta:review/: SKILL.md
skills/delta:ui/: SKILL.md
skills/do/: CLAUDE.md  SKILL.md
skills/do/modules/: config-schema.md  grounding.md  review.md  routing.md  scoring.md  setup-guide.md
tests/: __init__.py  conftest.py  test_adapters.py  test_boundaries.py  test_branch.py  test_checkpoint.py  test_cli.py  test_config.py  test_consensus.py  test_core.py  test_cross_validation.py  test_dispatch_cli.py  test_dispatch_errors.py  test_engines.py  test_executor.py  test_grounding.py  test_logging.py  test_models.py  test_notebooklm.py  test_parallel.py  test_ralph.py  test_router.py  test_schema.py  test_tasks_dag.py  test_usage.py  test_validator.py
tests/e2e/: __init__.py  test_architect_route.py  test_direct_route.py  test_error_recovery.py  test_knowledge_integration.py  test_planned_route.py  test_ralph_route.py  test_ui_flow_route.py
tests/integration/: __init__.py  test_cross_validation_integration.py  test_grounding_integration.py
workflows/: CLAUDE.md  implement.json  learn.json  plan.json  research.json  review.json  ui.json  verify-spec.json
